Bug 156825 - Half of the splash screen is visible on both monitors under Linux
Summary: Half of the splash screen is visible on both monitors under Linux
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Splash-Screen
  Show dependency treegraph
 
Reported: 2023-08-20 13:10 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-22 11:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-20 13:10:33 UTC
Recently on master I started to notice that the splash screen of LO appears centered on both my monitors, while earlier it was shown only on one monitor.

1. Start LO on a system with two monitors
-> Splash screen is in the horizontal middle of the unified screen area, half on the right side of the left screen and half on the left side of the right screen.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34d32740d89876c3d4fd2743a07d6e2578601683
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started with:

https://git.libreoffice.org/core/+/4c00a5bce384c5fa3b46cf5bb29c7e9b1e506ea0%5E%21/#F1

author	Noel Grandin <noel.grandin@collabora.co.uk>	Thu Jul 20 11:27:17 2023 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Fri Jul 21 11:01:29 2023 +0200

Assume that, if we have X11, it supports Xinerama

Adding CC to: Noel Grandin
Comment 1 Noel Grandin 2023-08-20 16:30:47 UTC
Are you running XWayland or XFree86 as your desktop ?
Comment 2 Commit Notification 2023-08-22 11:16:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3eee14d4e769ad063e71ccb476f722188a66d50f

tdf#156825 Half of the splash screen is visible on both monitors under Linux

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.