tdf#156825 Half of the splash screen is visible on both monitors under Linux

Blind fix, since I don't have two screens.

regression from
    commit 4c00a5bce384c5fa3b46cf5bb29c7e9b1e506ea0
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jul 20 11:27:17 2023 +0200
    Assume that, if we have X11, it supports Xinerama

It looks like I missed the removal of some USE_XINERAMA pieces

Change-Id: I402db170916efe935d8ff9f96cc9b327070809b7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155939
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>